Style: fix tiny screen on mobile, reduce font-size

--- a/css/base.css
+++ b/css/base.css
@@ -12,8 +12,9 @@ html {
 body {
   background-color: #ffffff;
   inline-size: 334px;
-  margin: 20px auto;
-  height: calc(100vh - 40px);
+  margin: 0px auto;
+  /*min-height: calc(100vh - 20px);*/
+  min-height: 100vh;
 
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -26,12 +27,8 @@ body {
   gap: 10px
 }
 
-header {
-  /*margin-block-end: 10px;*/
-}
-
 header h1 {
-  font-size: 24px;
+  font-size: 20px;
   line-height: auto;
 }
 
@@ -144,7 +141,7 @@ header h1 {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 19px;
   
   color: #5E6366;
@@ -206,7 +203,7 @@ header h1 {
 
   /*width: 264px;*/
   width: 100%;
-  height: 41px;
+  height: 36px;
 
   background: #FFFFFF;
   border: 1px solid rgba(60, 60, 67, 0.3);
@@ -216,7 +213,7 @@ header h1 {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 24px;
 
   /* Inside auto layout */
@@ -232,7 +229,7 @@ header h1 {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 24px;
   /* identical to box height, or 150% */
 
@@ -248,10 +245,12 @@ header h1 {
 }
 
 #frame-order-message,
-#frame-progress-container {
-  align-items: center;
+#frame-progress-container,
+#frame-SKU-container {
+  font-size: 14px;
 }
 
-#frame-SKU-container {
-  font-size: 15px;
+#frame-order-message,
+#frame-progress-container {
+  align-items: center;
 }
